// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlexCol /> renders filling the columns at certain breakpoint 1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: px;
  padding-left: px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

@media (min-width:768px) {
  .c0 {
    display: block;
    -webkit-flex-basis: 0;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    max-width: 100%;
  }
}

<div
  class="c0"
>
  A column
</div>
`;

exports[`<FlexCol /> renders hidden at certain breakpoint 1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: px;
  padding-left: px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

@media (min-width:768px) {
  .c0 {
    display: none;
  }
}

<div
  class="c0"
>
  A column
</div>
`;

exports[`<FlexCol /> renders with custom columns 1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: px;
  padding-left: px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

@media (min-width:768px) {
  .c0 {
    display: block;
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

<div
  class="c0"
  cols="4"
>
  A column
</div>
`;

exports[`<FlexCol /> renders without issues 1`] = `
.c0 {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-right: px;
  padding-left: px;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

<div
  class="c0"
/>
`;
